--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditTaskActivity"></activity>
+        <activity
+            android:name=".EditTaskFragment"
+            android:theme="@style/Theme.Taskie.NoActionBar">></activity>
+        <activity
+            android:name=".CalendarActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NotificationsActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ThemeActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 </manifest>
