--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        roomVersion = "2.4.2"
+        kotlin_version = '1.6.21'
+        core_version = "1.6.0"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
