--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         roomVersion = "2.4.2"
         kotlin_version = '1.6.21'
         core_version = "1.6.0"
+        dokkaVersion = '1.6.0'
+    }
+    dependencies {
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
     }
 }
 
